feat: add chalk

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,10 @@
     "esModuleInterop": true,
     "target": "ES2020",
     "sourceMap": true,
-    "outDir": "bin"
+    "outDir": "bin",
+    "types": [
+      "node"
+    ]
   },
   "include": [
     "src/**/*"
@@ -14,5 +17,5 @@
     "node_modules",
     "bin",
     "src/**/*.test.ts"
-  ]
+  ],
 }
