--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "axios": "^1.5.0"
+    "axios": "^1.5.0",
+    "chalk": "^5.3.0"
   }
 }
