feat: get course list from api

--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "name": "ezieweb",
   "version": "1.0.0",
   "description": "easy cli client for sieweb",
-  "main": "index.js",
-  "type": "module",
+  "main": "./bin/index.js",
+  "bin": "./bin/index.js",
   "files": [
-    "bin"
+    "bin/**/*",
+    "!bin/**/*.test.js"
   ],
-  "types": "bin/index.d.ts",
   "scripts": {
+    "dev": "ts-node ./src/index.ts",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/heinunez/ezieweb.git"
@@ -30,6 +32,7 @@
   "homepage": "https://github.com/heinunez/ezieweb#readme",
   "devDependencies": {
     "@types/node": "^20.6.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
