--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "!bin/**/*.test.js"
   ],
   "scripts": {
-    "dev": "ts-node ./src/index.ts",
+    "dev": "ts-node ./src/cli/index.ts",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -36,7 +36,9 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/inquirer": "^9.0.3",
     "axios": "^1.5.0",
-    "chalk": "^5.3.0"
+    "chalk": "^5.3.0",
+    "inquirer": "^9.2.11"
   }
 }
