feat: say no more

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "!bin/**/*.test.js"
   ],
   "scripts": {
-    "dev": "ts-node ./src/cli/index.ts",
+    "dev": "ts-node ./src/index.ts",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
