--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,11 @@
 {
   "compilerOptions": {
-    "target": "es2022",
-    "lib": ["ES2022"],
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "ES2022",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": false,
+    "rootDir": "src",
     "outDir": "bin",
-    "strict": true,
+    "module": "ESNext",
+    "target": "es6",
+    "esModuleInterop": true,
+    "moduleResolution": "Node",
   },
   "ts-node": {
     "esm": true,
